[gd_scene load_steps=16 format=3 uid="uid://co177yhhhgewc"]

[ext_resource type="Texture2D" uid="uid://c6elgtho7cr5t" path="res://assets/characters/mobs/spritesnake.png" id="1_kv2wp"]
[ext_resource type="Script" path="res://scenes/enemy_snake.gd" id="1_qdi4c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p3i1i"]
radius = 17.0294

[sub_resource type="AtlasTexture" id="AtlasTexture_rigt0"]
atlas = ExtResource("1_kv2wp")
region = Rect2(0, 48, 46, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj4ea"]
atlas = ExtResource("1_kv2wp")
region = Rect2(46, 48, 46, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wnsb"]
atlas = ExtResource("1_kv2wp")
region = Rect2(92, 48, 46, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6xmj"]
atlas = ExtResource("1_kv2wp")
region = Rect2(138, 48, 46, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpaqe"]
atlas = ExtResource("1_kv2wp")
region = Rect2(0, 0, 46, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqrrw"]
atlas = ExtResource("1_kv2wp")
region = Rect2(46, 0, 46, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6adi"]
atlas = ExtResource("1_kv2wp")
region = Rect2(0, 0, 46, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohfb8"]
atlas = ExtResource("1_kv2wp")
region = Rect2(92, 48, 46, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbgrm"]
atlas = ExtResource("1_kv2wp")
region = Rect2(46, 0, 46, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_rs2eq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rigt0")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_cj4ea")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_2wnsb")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_s6xmj")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_mpaqe")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_aqrrw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6adi")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_ohfb8")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_sbgrm")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ivcgw"]
radius = 140.004

[sub_resource type="CircleShape2D" id="CircleShape2D_y1ei5"]
radius = 44.0

[node name="enemy_snake" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_qdi4c")

[node name="chase_reset_timer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
shape = SubResource("CircleShape2D_p3i1i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1.90735e-06)
scale = Vector2(2.29545, 2.29545)
sprite_frames = SubResource("SpriteFrames_rs2eq")
animation = &"attack"
frame_progress = 0.695413
offset = Vector2(0, -6)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_ivcgw")

[node name="enemy_hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_y1ei5")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.266667, 0.0666667, 0.423529, 1)
offset_left = -24.0
offset_top = 22.0
offset_right = 76.0
offset_bottom = 42.0
scale = Vector2(0.5, 0.5)
max_value = 40.0
show_percentage = false

[node name="attack_timer" type="Timer" parent="."]

[connection signal="timeout" from="chase_reset_timer" to="." method="_on_chase_reset_timer_timeout"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
